--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.waewaee.ww_custom_view_components"
@@ -44,7 +44,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation "org.mmtextview:mmtextview:1.5"
 
     //GSON
     implementation 'com.google.code.gson:gson:2.9.0'
@@ -68,14 +67,14 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.0-alpha03")
 
     // lifecycle components
-    implementation "android.arch.lifecycle:extensions:2.2.0"
-    kapt "android.arch.lifecycle:compiler:2.2.0"
+//    implementation "android.arch.lifecycle:extensions:2.2.0"
+//    kapt "android.arch.lifecycle:compiler:2.2.0"
 
     // Annotation processor
-    kapt "androidx.lifecycle:lifecycle-compiler:2.5.1"
+    kapt("androidx.lifecycle:lifecycle-compiler:2.6.0-alpha03")
 
     // Room
     implementation "androidx.room:room-runtime:2.4.3"
