--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,18 @@
             android:theme="@style/Theme.WWCustomViewComponents.NoActionBar.TranslucentStatusBar">
 
         </activity>
+
+        <activity
+            android:name=".activities.ModifyCustomViewActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".activities.CustomComponentActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
