- set up for FanControlView ( Custom View )

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,12 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:name=".activities.FanControlActivity"
+            android:exported="true">
+
+        </activity>
+
     </application>
 
 </manifest>
